fix z-index of players

--- a/web/src/styles/in.css
+++ b/web/src/styles/in.css
@@ -172,7 +172,7 @@
     }
 
     .player-parent {
-        @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+        @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-30;
         .player {
             @apply drop-shadow-xl drop-shadow-black;
             background-image: url('../public/atlas.png');
